--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
@@ -43,6 +46,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "jest": "^27.5.1"
   }
 }
