--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "framer-motion": "^11.9.0",
+    "party-js": "^2.2.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
